crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__pending-find_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:NORMAL pending:f cursor:10                 │
│hello world                                     │
└────────────────────────────────────────────────┘
