crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__scrolled-down_after_50x15.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Command Palette ───────────────────────────────┐
│>                                               │
│────────────────────────────────────────────────│
│  Git: Commit                             Ctrl+G│
│  Git: Push                                     │
│  Git: Pull                                     │
│> Git: Branch                                   │
│  Build: Debug                            Ctrl+B│
│  Build: Release                                │
│  Build: Clean                                  │
│  Format All                              Ctrl+F│
│  Lint: Check                                   │
│  Test: Run                               Ctrl+T│
│[Root]                                          │
└────────────────────────────────────────────────┘
