crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__truecolor-mid_styled_20x1.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
<fg:#459494,bold>L</><fg:#29bfbf,bold>o</><fg:#13e2e2,bold>a</><fg:#0af0f0,bold>d</><fg:#13e2e2,bold>i</><fg:#29bfbf,bold>n</><fg:#459494,bold>g</>
