crates/tui-lib/src/devkit/snapshots/tui_lib__devkit__scenario__visual-selection_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:VISUAL pending:- cursor:6                  │
│hello world                                     │
└────────────────────────────────────────────────┘
